fixed css and added css to take away white space at top of pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,11 @@ textarea {
   resize: vertical; 
 }
 
+.topper {
+  position: absolute; 
+  top: 0; 
+}
+
 .alert {
   margin-top: 20px; 
 }
